--- a/MediaCatalog/Views/ViewerViewController.xib
+++ b/MediaCatalog/Views/ViewerViewController.xib
@@ -16,6 +16,7 @@
                 <outlet property="importFolderButton" destination="VfI-v7-Lwa" id="TCY-HH-ffY"/>
                 <outlet property="importedFilesTypesLabel" destination="ufh-on-Stn" id="cp4-Qb-OSZ"/>
                 <outlet property="selectedPhotoViewerView" destination="piP-zx-wfA" id="q0u-xH-32i"/>
+                <outlet property="showFileInFinderButton" destination="Qqh-2g-ylQ" id="QCG-jO-Eod"/>
                 <outlet property="sideMenuView" destination="QkP-80-bxS" id="DeA-MS-1X6"/>
                 <outlet property="thumbnailsCollectionView" destination="Eom-uv-zaB" id="932-46-DGe"/>
                 <outlet property="thumbnailsCollectionViewScrollView" destination="ZWX-Kx-rwg" id="3n8-cK-wog"/>
@@ -68,6 +69,19 @@
                                 <action selector="detectFacesButtonTapped:" target="-2" id="0Bh-0n-9Y0"/>
                             </connections>
                         </button>
+                        <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Qqh-2g-ylQ">
+                            <rect key="frame" x="43" y="415" width="134" height="32"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="120" id="LZ5-aw-CSj"/>
+                            </constraints>
+                            <buttonCell key="cell" type="push" title="Show in Finder" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="Qic-78-X19">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="showFileInFinderButtonTapped:" target="-2" id="WAi-nq-dpN"/>
+                            </connections>
+                        </button>
                         <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ufh-on-Stn">
                             <rect key="frame" x="18" y="20" width="184" height="20"/>
                             <constraints>
@@ -86,9 +100,11 @@
                         <constraint firstAttribute="trailing" secondItem="ufh-on-Stn" secondAttribute="trailing" constant="20" id="Hyb-eZ-ZDE"/>
                         <constraint firstItem="ufh-on-Stn" firstAttribute="centerX" secondItem="QkP-80-bxS" secondAttribute="centerX" id="PMG-Ng-GNs"/>
                         <constraint firstAttribute="width" constant="220" id="R1w-kB-3K6"/>
+                        <constraint firstItem="Qqh-2g-ylQ" firstAttribute="centerX" secondItem="QkP-80-bxS" secondAttribute="centerX" id="UfU-UP-uCc"/>
                         <constraint firstItem="ufh-on-Stn" firstAttribute="leading" secondItem="QkP-80-bxS" secondAttribute="leading" constant="20" id="fwZ-nL-XmZ"/>
                         <constraint firstAttribute="bottom" secondItem="ufh-on-Stn" secondAttribute="bottom" constant="20" id="gg7-hZ-Yfj"/>
                         <constraint firstItem="QeN-e6-Dkl" firstAttribute="top" secondItem="PgU-0F-UGm" secondAttribute="bottom" constant="20" id="hbx-xv-EKR"/>
+                        <constraint firstItem="Qqh-2g-ylQ" firstAttribute="top" secondItem="QeN-e6-Dkl" secondAttribute="bottom" constant="20" id="oOc-bz-K7L"/>
                         <constraint firstItem="PgU-0F-UGm" firstAttribute="centerX" secondItem="QkP-80-bxS" secondAttribute="centerX" id="q3J-X1-vfL"/>
                         <constraint firstItem="mob-LP-Vui" firstAttribute="leading" secondItem="QkP-80-bxS" secondAttribute="leading" id="qCd-pa-0E6"/>
                         <constraint firstItem="QeN-e6-Dkl" firstAttribute="centerX" secondItem="QkP-80-bxS" secondAttribute="centerX" id="tRB-fU-uWS"/>
